APPS-1366 Support Secret Agent keys for S3 credentials configuration (#280)
* add cache to secret agent

* use s3 auth

* go mod

* storage toModel

* extract s3  storage to file

* secret agent in s3

* dto to model

* add convert test

* add convert test

* update storage to model test

* resolve secret agent

* no sa validation

* update doc

* merge v2

* check nil agent

* assign directly

* remove secretKeyPassword

* remove port from error message

* combine secret agents

* add secret agent test

* regenerate api

* return only SecretAgentCOnfig

* use %w
