# docs/openapi.yaml
@@ -1615,27 +1615,26 @@ components:
           - PKI
           type: string
         password:
-          description: The password for the cluster authentication.
+          description: |-
+            The password for the cluster authentication.
+            It can be either plain text or path into the secret agent.
           example: testPswd
           type: string
-        password-key-secret:
-          description: |-
-            The secret keyword in Aerospike Secret Agent containing password.
-            Only applicable when SecretAgent is specified.
-          type: string
         password-path:
-          description: "The file path with the password string, will take precedence\
-            \ over the password field."
+          description: The file path with the password string.
           example: /path/to/pass.txt
           type: string
         secret-agent:
           allOf:
           - $ref: '#/components/schemas/dto.SecretAgent'
-          description: Secret Agent configuration (optional).
+          description: |-
+            Secret Agent configuration (optional).
+            Mutually exclusive with secret-agent-name.
           type: object
         secret-agent-name:
-          description: Secret Agent configuration (optional). Link to one of preconfigured
-            agents.
+          description: |-
+            Secret Agent configuration (optional). Link to one of preconfigured agents.
+            Mutually exclusive with secret-agent.
           type: string
         user:
           description: The username for the cluster authentication.
@@ -2160,6 +2159,11 @@ components:
       type: object
     dto.S3Storage:
       properties:
+        access-key-id:
+          description: |-
+            Access Key ID for authentication with S3 StaticCredentialsProvider.
+            Can be a path in secret agent or an actual value.
+          type: string
         bucket:
           description: The S3 bucket name.
           type: string
@@ -2194,13 +2198,30 @@ components:
           description: The S3 region string.
           example: eu-central-1
           type: string
+        secret-access-key:
+          description: |-
+            Secret Access Key for authentication with S3 StaticCredentialsProvider.
+            Can be a path in secret agent or an actual value.
+          type: string
+        secret-agent:
+          allOf:
+          - $ref: '#/components/schemas/dto.SecretAgent'
+          description: |-
+            Secret Agent configuration (optional).
+            Mutually exclusive with secret-agent-name.
+          type: object
+        secret-agent-name:
+          description: |-
+            Secret Agent configuration (optional). Link to one of preconfigured agents.
+            Mutually exclusive with secret-agent.
+          type: string
       required:
       - bucket
       - s3-region
       type: object
     dto.SecretAgent:
       description: SecretAgent represents the configuration of an Aerospike Secret
-        Agent for a backup/restore operation.
+        Agent.
       example:
         tls-ca-file: /path/to/ca.pem
         address: localhost
